// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot - attached right 1`] = `
<StyledButton
  attached="right"
  bgColor="var(--bg-light)"
  className="Button"
  color="var(--text-light)"
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text)"
  onClick={[Function]}
  size="medium"
>
  <span>
    test
  </span>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot - disbled 1`] = `
<StyledButton
  bgColor="var(--bg-light)"
  className="Button"
  color="var(--text-light)"
  disabled={true}
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text)"
  onClick={null}
  size="medium"
>
  <span>
    test
  </span>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot - isLoading 1`] = `
<StyledButton
  bgColor="var(--bg-light)"
  className="Button flex-row"
  color="var(--text-light)"
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text)"
  onClick={[Function]}
  size="medium"
>
  <Memo()
    name="loader"
  />
  <span>
    test
  </span>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot - mixed 1`] = `
<StyledButton
  attached="left"
  bgColor="var(--bg-light)"
  className="Button"
  color="var(--text-light)"
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text)"
  onClick={[Function]}
  pushable={true}
  size="small"
>
  <span>
    test
  </span>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot - text button 1`] = `
<StyledButton
  bgColor="transparent"
  className="Button"
  color="var(--text-light)"
  hoverBgColor="var(--bg-light)"
  hoverColor="var(--text)"
  onClick={[Function]}
  size="medium"
>
  <span>
    test
  </span>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot - typed 1`] = `
<StyledButton
  bgColor="var(--bg-lightest)"
  className="Button"
  color="var(--text-light)"
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text)"
  onClick={[Function]}
  size="medium"
>
  <span>
    test
  </span>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot 1`] = `
<StyledButton
  bgColor="var(--bg-light)"
  className="Button"
  color="var(--text-light)"
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text)"
  onClick={[Function]}
  size="medium"
>
  <span>
    test
  </span>
</StyledButton>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<span
  className="StyledButton-aqwbwz-0 FteAE Button"
  color="var(--text-light)"
  onClick={[Function]}
  size="medium"
>
  <span>
    test
  </span>
</span>
`;
